[gd_scene load_steps=4 format=3 uid="uid://cv2p5kytjxhcc"]

[ext_resource type="Script" path="res://enemies/bullet.gd" id="1_aiqxr"]
[ext_resource type="Texture2D" uid="uid://bakhfdni41ijs" path="res://art/bullet.png" id="2_b11y0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0fg0i"]
radius = 6.0

[node name="Bullet" type="Node2D"]
script = ExtResource("1_aiqxr")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_b11y0")

[node name="DespawnTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_0fg0i")

[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
